# badr

./: .gitignore  .readthedocs.yaml  README.md  fairness_badr_lab.ipynb  fairness_badr_lab_solutions.ipynb  lab_fairness_multiobjective.ipynb  lab_helpers.py  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml
badr/: __base__.py  __init__.py
badr/algorithms/: __base__.py  __init__.py  badr.py  frank_wolfe.py  slsqp.py  trust_constr.py
badr/datasets/: __init__.py  adult.py  arrhythmia.py  communities_and_crime.py  compas.py  dataframe.py  folktables.py  german_credit.py  law_school.py  parkinsons_telemonitoring.py  student_performance.py
badr/metrics/: __base__.py  __init__.py  demographic_parity.py  disparate_mistreatment.py  equal_opportunity.py  equalized_odds.py  group_variance.py  hsic.py  individual_fairness.py
badr/models/: __base__.py  __init__.py  _logistic_regression.py  _ridge_regression.py  _smooth_svm.py
badr/oracles/: __base__.py  __init__.py  implicit_oracle.py  stochastic_oracle.py
docs/: index.md  requirements.txt
docs/getting-started/: index.md
docs/reference/: algorithms.md  badr.md  datasets.md  index.md  metrics.md  models.md  oracles.md
docs/styles/: pygments-dark.css  pygments-light.css
experiments/experiment_1/: experiment_1.ipynb
experiments/experiment_2/: logs.jsonl  notebook.ipynb  plotter.py  results.jsonl  results_completed_keys.json  script.py
experiments/experiment_3/: notebook.ipynb  script.py
experiments/experiment_3/outputs/: classification_records.jsonl  classification_summary.json  regression_records.jsonl  regression_summary.json
experiments/figure_2/: data_dict.json  results.json  script.py
experiments/scalability/: badr_results.json  badr_scalability.py  group_scalability.pkl  notebook.ipynb
